apps/hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: demo
spec:
  selector:
    app: hello-world
  ports:
    - port: 80
      targetPort: 5678
